<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.user.technician.FinishedTaskDetails">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/top_bar_color">

        <ImageView
            android:id="@+id/finished_task_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_details"
            android:textSize="20sp"
            android:layout_marginLeft="50dp"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="12dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/theme_color2"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="6dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type"
                            android:layout_marginLeft="10dp"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/task_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Repair"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:layout_marginLeft="10dp"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/task_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Solar panel not working properly"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_details"
                        android:textSize="20sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="30dp">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textColor="@color/black"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/customer_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="Sahan"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/address"
                                android:textColor="@color/black"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/customer_address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="Homagama"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/order_no"
                                android:textColor="@color/black"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/customer_order_no"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="0045"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:layout_marginLeft="10dp"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="54dp"
                            android:inputType="date"
                            android:hint=" : 22/10/2022"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:layout_marginLeft="10dp"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/task_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Not finished"
                            android:textColor="@color/purple_200"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feedback"
                            android:layout_marginLeft="10dp"
                            android:textSize="18sp"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="30dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rating_details"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>
                            <TextView
                                android:id="@+id/rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="5"
                                android:textStyle="bold"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="30dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rating_description"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>
                            <TextView
                                android:id="@+id/rating_description"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="Good service friendly technician as well"
                                />



                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/technician_feedback_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="30dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/your_feedback"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>
                            <TextView
                                android:id="@+id/technician_feedback_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="Good customer"
                                />



                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/technician_add_feedback_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp">


                            <EditText
                                android:id="@+id/technician_feedback_input"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:hint="Add Feedback"/>

                            <Button
                                android:id="@+id/technician_feedback_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Submit"
                                android:layout_marginLeft="20dp"
                                android:textColor="@color/black"
                                android:backgroundTint="@color/top_bar_color"/>
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</LinearLayout>