<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="com.user.customer.CustomerProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imgView"
                android:background="@drawable/profile"
                android:layout_width="100dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:layout_height="100dp" />
            <TextView
                android:id="@+id/technician_photo_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/customer_name"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Name"/>

                <EditText
                    android:id="@+id/customer_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:hint="Email"/>

                <EditText
                    android:id="@+id/customer_address"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:hint="Address"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="50dp">

                    <Button
                        android:id="@+id/customer_delete_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/top_bar_color"
                        />
                    <Button
                        android:id="@+id/customer_update_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update"
                        android:backgroundTint="@color/top_bar_color"
                        android:textColor="@color/black"
                        android:layout_marginLeft="100dp"
                        />
                </LinearLayout>




            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>